[gd_scene load_steps=2 format=3 uid="uid://b8k3j2m4n5p6q"]

[ext_resource type="Script" uid="uid://br86ol4srq8vv" path="res://scripts/sleep/sleep_prompt_ui.gd" id="1_sleep_prompt"]

[node name="SleepPromptUI" type="Control"]
visible = false
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 2
script = ExtResource("1_sleep_prompt")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Go to sleep?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="YesButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Yes"

[node name="NoButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "No"
